# Gomoku

./: Bouton.cpp  Bouton.hpp  CMakeLists.txt  Core.cpp  Core.hpp  Five.hpp  Heuristic.cpp  Heuristic.hpp  Makefile  Model.cpp  Model.hpp  Player.cpp  Player.hpp  README.md  ResultCoup.hpp  View.cpp  View.hpp  f3libre.cpp  main.cpp  myEvent.hpp  pos.hpp
test/: a.out  main.cpp
